# cids-servers

./: .gitignore  .ssh  .ssh.pub  CMakeLists.txt  README.md  step.md
Src/Center/: Center.cpp  CenterMain.cpp
Src/Common/: ServerBase.cpp  Udp.cpp
Src/Mirror/: Mirror.cpp  MirrorMain.cpp  codec_lib.cpp  db_lib.cpp  json_lib.cpp
include/: ServerBase.cpp  ServerBase.hpp  Telemeter.hpp  Type.hpp  Udp.hpp  center_head  common_head  mirror_head
include/Common/: ServerBase.hpp  Telemeter.hpp  Udp.hpp
include/Third_Lib/boost/: any.hpp
include/Third_Lib/fmt/: core.h
include/center/: CenterConfig.txt  MirDescript.h  TcpEcho.cpp  TcpEcho.h  center.cpp  center.h  main.cpp
include/db_control/: db_control.cpp
include/json_control/: json_control.cpp
include/mirror/: BackGround.hpp  ClassInfo.h  ClassInfo.hpp  ClassMes.hpp  Cli.cpp  Cli.hpp  CliDescript.hpp  Message.h  Message.hpp  Mirror.cpp  Mirror.h  Mirror.hpp  MirrorConfig.txt  Util.hpp  lesson.hpp
test_driver/: client_bootstrap.csc  mirror_keep_alive.csc
